odevzdani/tests/invalid_syn/syn05.java
class Main {
    static void run() {
        int a = (((((((((((1 + 1)))))))))); // chybi 1 prava zavorka
    }
}
